# crocodile

./: .env.example  main.py  pyproject.toml  worker.py
api/: webhooks.py
core/: config.py
schemas/: github.py  review.py
services/: github_service.py  review_service.py
utils/: diff_parser.py
